--- a/index.html
+++ b/index.html
@@ -1170,38 +1170,6 @@
                     <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
-                        data-href="https://www.facebook.com/LimpiezaFumigacioneslzc"
-                        data-tabs="timeline" 
-                        data-width=""
-                        data-height="" 
-                        data-small-header="false"
-                        data-adapt-container-width="true" 
-                        data-hide-cover="false" 
-                        data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/LimpiezaFumigacioneslzc" class="fb-xfbml-parse-ignore">
-                                <a href="https://www.facebook.com/LimpiezaFumigacioneslzc">Master limpieza</a>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
-                        <div 
-                        class="fb-page" 
-                        data-href="https://www.facebook.com/ingelectricohl"
-                        data-tabs="timeline" 
-                        data-width=""
-                        data-height="" 
-                        data-small-header="false"
-                        data-adapt-container-width="true" 
-                        data-hide-cover="false" 
-                        data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/ingelectricohl" class="fb-xfbml-parse-ignore">
-                                <a href="https://www.facebook.com/ingelectricohl">Servicios de Ingeniería Eléctrica HL</a>
-                            </blockquote>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
-                        <div 
-                        class="fb-page" 
                         data-href="https://www.facebook.com/palapascabanasriomar"
                         data-tabs="timeline" 
                         data-width=""
@@ -1218,7 +1186,7 @@
                     <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
-                        data-href="https://www.facebook.com/estructurasconcretolzc"
+                        data-href="https://www.facebook.com/ingelectricohl"
                         data-tabs="timeline" 
                         data-width=""
                         data-height="" 
@@ -1226,8 +1194,24 @@
                         data-adapt-container-width="true" 
                         data-hide-cover="false" 
                         data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/estructurasconcretolzc" class="fb-xfbml-parse-ignore">
-                                <a href="https://www.facebook.com/estructurasconcretolzc">Estructuras de Concreto</a>
+                            <blockquote cite="https://www.facebook.com/ingelectricohl" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/ingelectricohl">Ingeniería Eléctrica HL</a>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 mx-auto">
+                        <div 
+                        class="fb-page" 
+                        data-href="https://www.facebook.com/masterlimpio341"
+                        data-tabs="timeline" 
+                        data-width=""
+                        data-height="" 
+                        data-small-header="false"
+                        data-adapt-container-width="true" 
+                        data-hide-cover="false" 
+                        data-show-facepile="true">
+                            <blockquote cite="https://www.facebook.com/masterlimpio341" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/masterlimpio341">Sanimex</a>
                             </blockquote>
                         </div>
                     </div>
@@ -1250,7 +1234,7 @@
                     <div class="col-12 col-md-6 col-lg-4 mx-auto">
                         <div 
                         class="fb-page" 
-                        data-href="https://www.facebook.com/masterlimpio341"
+                        data-href="https://www.facebook.com/estructurasconcretolzc"
                         data-tabs="timeline" 
                         data-width=""
                         data-height="" 
@@ -1258,8 +1242,8 @@
                         data-adapt-container-width="true" 
                         data-hide-cover="false" 
                         data-show-facepile="true">
-                            <blockquote cite="https://www.facebook.com/masterlimpio341" class="fb-xfbml-parse-ignore">
-                                <a href="https://www.facebook.com/masterlimpio341">Sanimex</a>
+                            <blockquote cite="https://www.facebook.com/estructurasconcretolzc" class="fb-xfbml-parse-ignore">
+                                <a href="https://www.facebook.com/estructurasconcretolzc">Estructuras de Concreto</a>
                             </blockquote>
                         </div>
                     </div>
