--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nosotros - Albercas del mar</title>
+    <title>Contacto - Albercas del mar</title>
     <link rel="icon" type="image/png" href="img/logo/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="assets/bootstrap/bootstrap/dist/css/bootstrap.min.css">
@@ -24,19 +24,9 @@
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/estilosPersonalizados.css">
     <link rel="stylesheet" href="css/otrosEstilos.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
+    <link rel="stylesheet" href="css/estilosFormularioContacto.css"/>
+    <link rel="stylesheet" href="css/spinnerCarga.css"/>
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9VQQ8DSKZG"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-9VQQ8DSKZG');
-    </script>
 </head>
 <body class="none-scrollY">
     <div class="load-container visble">
@@ -177,74 +167,79 @@
             FORMULARIO DE COTIZACIÓN:
         </h1>
         <div class="container">
-            <div class="row">
-                <form id="frmConsulta">
-                    <div class="row">
-                        <div class="col-12 col-md-6 form-group">
-                            <label for="nombre">Nombre:</label>
-                            <input type="text" name="nombre" class="form-control">
-                            <span class="campoObligatorio">Campo obligatorio</span>
-                        </div>
+            <h2 class="centrar-texto mt-5">Contacto</h2>
+            <div class="row justify-content-md-center">
+                <div class="rounded border border-light bg-light text-dark p-5">
+                    <form class="frmPrecalificacion">
                         <div class="row">
-                            <div class="col-12 col-md-6 form-group">
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="form-group">
+                                    <label for="Nombre"><strong>Nombre</strong></label>
+                                    <input 
+                                    type="text" 
+                                    name="nombre"
+                                    class="form-control"/>
+                                    <span class="campoObligatorio">Campo obligatorio</span>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="form-group">
+                                    <label for="Apellido paterno"><strong>Apellido paterno</strong></label>
+                                    <input 
+                                    type="text" 
+                                    name="apellidoPaterno"
+                                    class="form-control"/>
+                                    <span class="campoObligatorio">Campo obligatorio</span>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-3">
+                                <div class="form-group">
+                                    <label for="Apellido materno"><strong>Apellido materno</strong></label>
+                                    <input 
+                                    type="text" 
+                                    name="apellidoMaterno"
+                                    class="form-control"/>
+                                </div>
+                            </div>
+                            <div class="form-group col-12 col-md-6 col-lg-3">
                                 <label for="nombre">Email:</label>
-                                <input type="text" name="nombre" class="form-control">
+                                <input 
+                                type="email" 
+                                name="email"
+                                class="form-control"/>
                                 <span class="campoObligatorio">Campo obligatorio</span>
                             </div>
-                            <div class="col-12 col-md-6 form-group">
-                                <label for="nombre">Teléfono:</label>
-                                <input type="text" name="telefono" class="form-control">
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <label for="descripcionProyecto">Mi proyecto es de:</label>
-                            <textarea 
-                            name="mensaje" 
-                            rows="20" 
-                            placeholder="Describa aquí su proyecto"
-                            class="form-control"></textarea>
-                            <span class="campoObligatorio">Campo obligatorio</span>
                         </div>
                         <div class="row">
-                            <div class="col-12 col-md-6 form-group">
-                                <label for="nombre">Lugar a realizar:</label>
-                                <input type="text" name="lugarRealizar" class="form-control">
+                            <div class="form-group col-12">
+                                <label for="Mensaje"><strong>Escriba su mensaje</strong></label>
+                                <textarea 
+                                class="form-control"
+                                rows="8"
+                                name="mensaje"></textarea>
                                 <span class="campoObligatorio">Campo obligatorio</span>
                             </div>
-                            <div class="col-12 col-md-6 form-group">
-                                <label for="descripcionProyecto">Medidas:</label>
-                                <textarea 
-                                name="medidas" 
-                                rows="5" 
-                                class="form-control h-auto"
-                                placeholder="Si las conoce"></textarea>
-                            </div>
                         </div>
-                        <div class="col-12">
-                            <label for="descripcionProyecto">Fotos:</label>
-                            <input 
-                            type="file"
-                            name="fotos" 
-                            class="form-control"
-                            id="fotos"
-                            multiple
-                            accept="image/png, image/jpeg">
+                        <div class="row justify-content-center">
+                            <button 
+                            class="btn btn-success btnEnviarPrecalificacion" 
+                            type="button">
+                                Enviar solicitud
+                            </button>
                         </div>
+                    </form>
+                </div>
+                <div class="cargaSpinner d-none">
+                    <div class="circleA">
+                        <div class="circleB"></div>
                     </div>
-                    <button 
-                    class="btn btn-success fondo-color-secundario btn-contacto mb-4"
-                    type="button"
-                    disabled>
-                        ENVIAR
-                    </button>
-                </form>
+                </div>
             </div>
         </div>
     </main>
     <button type="button" class="irAbajo">
         <i class="fa fa-arrow-down" aria-hidden="true"></i>
     </button>
-    
     <footer class="site-footer">
         <div class="container">
             <div class="row mb-3">
@@ -799,19 +794,15 @@
             <span>Albercas del Mar <span class="anio-actual">---</span></span>
         </p>
     </footer>
-
-    <!-- <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script> -->
     <script src="assets/js/jquery/dist/jquery.min.js"></script>
     <script src="assets/bootstrap/@popperjs/core/dist/umd/popper.min.js"></script>
     <script src="assets/bootstrap/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/bootbox/dist/bootbox.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.colorbox/1.6.4/jquery.colorbox-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
-    <script 
-    src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
+    <script src="/js/server/enviarEmail.js"></script>
     <div id="fb-root"></div>
     <script
     async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v9.0"
